--- a/index.html
+++ b/index.html
@@ -68,21 +68,19 @@
         <!-- Início Info -->
         <section class="info">
             <div class="container-grid conteudo-info">
-                <div class="card-info">
-                    <h3>Local</h3>
-                    <p>São Paulo</p>
-                </div>
-                <div class="container-grid conteudo-info">
+                    <div class="card-info">
+                        <h3>Local</h3>
+                        <p>São Paulo</p>
+                    </div>                
                     <div class="card-info">
                         <h3>Duração</h3>
                         <p>90 dias</p>
-                    </div>
-                    <div class="container-grid conteudo-info">
+                    </div>                   
                         <div class="card-info">
                             <h3>Desafios</h3>
                             <p>+30 Desafios</p>
                         </div>
-                    </div>
+            </div>
         </section>
         <!-- Fim Info -->
         <!-- Iníco Endereço -->
@@ -92,7 +90,13 @@
                 <div class="texto-endereco">
                     <p>Alameda Barão de Limeira, 539 Santa Cecília, São Paulo -SP CEP: 01202-001</p>
                 </div>
-                <a href="#"><img class="mapa" src="./img/mapa.png" alt="mapa mostrando a localização da escola"></a>
+                <!-- <a href="https://goo.gl/maps/A3JPNYe7rfGT8Xnv7"><img class="mapa" src="./img/mapa.png" alt="mapa mostrando a localização da escola"></a> -->
+                <div class="container-mapa">
+                    <iframe class="mapa-responsivo" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14631.561130409558!2d-46.646047499999995!3d-23.5364483!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5843deb99025%3A0xb23619858bc7e63e!2sSenai%20Santa%20Cec%C3%ADlia%20(Inform%C3%A1tica)!5e0!3m2!1spt-BR!2sbr!4v1687221203588!5m2!1spt-BR!2sbr" width="850" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="container-video">
+                    <iframe class="video-responsivo" src="https://www.youtube.com/embed/2FZGKO4-Yns?start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
             </div>
         </section>
         <!-- Fim Endereço -->
