--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/layout_mobile.css">    
     <script src="https://kit.fontawesome.com/9c9a0e7a37.js" crossorigin="anonymous"></script>
     <title>Landin Page</title>
 </head>
@@ -16,7 +17,7 @@
         <div class=" container-grid conteudo-header">
             <img class="logo" src="./img/logos_senai_branco.png" alt="Logo Senai">
             <nav id="menu-header" class="menu-header">
-                <a href="index.html" title="Início da Página">Início</a>
+                <a href="index.html" title="Início da Página" class="fa-solid fa-house" style="color: whitesmoke;">
                 <a href="#">Sobre</a>
                 <a href="#">Localização</a>
                 <a class="botao" href="mailto:exemplo@gmai.com">Contate-nos</a>
@@ -107,5 +108,7 @@
         <!-- Fim Footer -->
     </main>
 </body>
+
+<script src="./js/mostrarMenu.js"></script>
 
 </html>
